--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -158,6 +158,9 @@ color:var(--black-color);
         <div class="form-group">
             <input type="password" name='pwd' placeholder="Password" required="">
         </div>
+        
+        <!--<div style="background-color:red;color:white;padding:2%;">Danger !</div>-->
+        <p style="color:red;">Danger !</p>
         <div class="forget-password">
             <div class="check-box">
                 <input type="checkbox" id="checkbox">
