--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -1,4 +1,5 @@
 {%extends "../base.html"%}
+{% load static %}
 {% block content %}
 <style>
     /* === Google Font ===*/
@@ -41,7 +42,7 @@ top:0;
 left:0;
 right:0;
 bottom:0;
-/* background-image: url("images/bg-1.svg"); */
+background-image: url("{% static 'bg-1.svg' %}");
 background-position: center center;
 background-size: cover;
 background-repeat: no-repeat;
