--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -186,7 +186,7 @@
       <button type="submit" class="btn">SIGN UP</button>
       <div class="account-exist">
         Already have an account?
-        <a href="{% url 'accounts:login' %}" id="login">Login</a>
+        <a href="{% url 'accounts:signin' %}" id="login">Login</a>
       </div>
     </div>
   </form>
