--- a/templates/app/family.html
+++ b/templates/app/family.html
@@ -8,7 +8,6 @@
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
   }
-
   /* === Variables Define ===*/
   :root {
     --primary-color: #3525d3;
@@ -25,7 +24,6 @@
     justify-content: center;
     min-height: 100vh;
   }
-
   /* === Main Content CSS ===*/
   .wrapper {
     padding: 50px 25px 0;
@@ -56,11 +54,7 @@
     font-weight: 700;
     line-height: 52px;
   }
-  .wrapper .form {
-    max-width: 350px;
-    width: 100%;
-    margin: auto;
-  }
+
   .wrapper .form-group {
     margin-bottom: 15px;
   }
@@ -101,6 +95,11 @@
     cursor: pointer;
     text-align: center;
   }
+  .wrapper .form11 {
+    max-width: 350px;
+    width: 100%;
+    margin: auto;
+  }
   .wrapper .btn:focus {
     outline: none;
   }
@@ -113,20 +112,6 @@
   .wrapper .account-exist a {
     color: var(--primary-color);
   }
-  .wrapper .forget-password {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 15px 0;
-  }
-  .wrapper .forget-password a {
-    color: var(--primary-color);
-  }
-  .wrapper .forget-password .check-box {
-    font-size: 15px;
-    color: var(--black-color);
-  }
-
   @media (max-width: 1030px) {
     .wrapper::before {
       left: -25%;
@@ -145,40 +130,61 @@
   }
 </style>
 <div class="wrapper">
-  <div class="headline">
-    <h1>SIGN IN !.</h1>
-  </div>
-  <form action="{% url 'accounts:signin' %}" method="post">
+  <form class="form" method="POST" action="{% url 'app:familyForm' %}">
     {% csrf_token %}
-    <div class="signin">
-      <div class="form-group">
-        <input type="email" name="email" placeholder="Email" required="" />
-      </div>
-      <div class="form-group">
-        <input
-          type="password"
-          name="password"
-          placeholder="Password"
-          required=""
-        />
-      </div>
-      {% if error %}
-        <p style="color: red">{{error}}</p>
-      {% endif %} 
-      <!--<div style="background-color:red;color:white;padding:2%;">Danger !</div>-->      
-      <div class="forget-password">
-        <div class="check-box">
-          <input type="checkbox" id="checkbox" />
-          <label for="checkbox">Remember me</label>
+    <h3>Family Details</h3>
+    <hr />
+    <div class="form11">
+      <div class="signup">
+        <div class="form-group">
+          <input
+            type="text"
+            name="father"
+            placeholder="Father name"
+            required=""
+          />
         </div>
-        <a href="#">Forget password?</a>
-      </div>
-      <button type="submit" class="btn">LOGIN</button>
-      <div class="account-exist">
-        Create New a account?
-        <a href="{% url 'accounts:register' %}" id="signup">Signup</a>
+        <div class="form-group">
+          <input
+            type="text"
+            name="mother"
+            placeholder="Mother name"
+            required=""
+          />
+        </div>
+        <div class="form-group">
+          <input type="text" name="sibling" placeholder="Sibling name" />
+        </div>
+        <div class="form-group">
+          <input type="text" name="guardian" placeholder="Guardian name" />
+        </div>
+        <div class="form-group">
+          <label>Please provide Contact Details</label>
+          <input
+            type="tel"
+            name="contact1"
+            placeholder="Enter contact number"
+            required=""
+            pattern="[789][0-9]{9}"
+            title="Enter 10 digit contact. Number should start from 7,8 or 9"
+          />
+        </div>
+        <div class="form-group">
+          <input
+            type="tel"
+            name="contact2"
+            required=""
+            placeholder="Enter alternate contact number"
+            pattern="[789][0-9]{9}"
+            title="Enter 10 digit contact. Number should start from 7,8 or 9"
+          />
+        </div>
+        {% if error %}
+        <p style="color: red">{{error}}</p>
+        {% endif %} 
       </div>
     </div>
+    <button type="submit" class="btn">Submit</button>
   </form>
 </div>
 {% endblock %}
