--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
     <h1>Hello</h1>
     {% block content %} {% endblock content %}
 
-    <footer class="page-footer font-small bg-dark">
+    <footer class="page-footer font-small bg-dark" style="bottom: 0vh;">
       <div class="footer-copyright text-center py-3" style="color: aliceblue;">© 2020 Copyright:
         <a href="https://mdbootstrap.com/"> MDBootstrap.com</a>
         <a href="#">Link 1</a>
