--- a/templates/app/person.html
+++ b/templates/app/person.html
@@ -71,10 +71,31 @@
     box-shadow: none;
     width: 100%;
   }
+  .wrapper .form-group select {
+    display: block;
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: -0.1px;
+    padding: 11px 15px;
+    height: 48px;
+    border-radius: 5px;
+    color: var(--black-color);
+    border: 1px solid #e4e8ee;
+    box-shadow: none;
+    width: 100%;
+  }
   .wrapper .form-group input:focus {
     outline: none;
   }
+  .wrapper .form-group select:focus {
+    outline: none;
+  }
   .wrapper .form-group input::placeholder {
+    color: var(--black-color);
+    font-weight: 400;
+    font-size: 14px;
+  }
+  .wrapper .form-group select::placeholder {
     color: var(--black-color);
     font-weight: 400;
     font-size: 14px;
@@ -131,11 +152,13 @@
 </style>
 <div class="wrapper">
   <div class="headline">
+    <br>
     <h2>Information</h2>
   </div>
 
   <form class="form" method="POST" action="{% url 'app:missingPersonForm' %}">
     {% csrf_token %}
+    
     <h3>Missing Person Details</h3>
     <hr />
     <div class="form11">
@@ -167,7 +190,47 @@
           <input type="number" name="weight" placeholder="Weight" />
         </div>
         <div class="form-group">
-          <input type="text" name="state" placeholder="State" required="" />
+      
+          <select id="country-state" name="country-state">
+            <option value="none" selected disabled hidden>Select State</option>
+            <option value="AN">Andaman and Nicobar Islands</option>
+            <option value="AP">Andhra Pradesh</option>
+            <option value="AR">Arunachal Pradesh</option>
+            <option value="AS">Assam</option>
+            <option value="BR">Bihar</option>
+            <option value="CH">Chandigarh</option>
+            <option value="CT">Chhattisgarh</option>
+            <option value="DN">Dadra and Nagar Haveli</option>
+            <option value="DD">Daman and Diu</option>
+            <option value="DL">Delhi</option>
+            <option value="GA">Goa</option>
+            <option value="GJ">Gujarat</option>
+            <option value="HR">Haryana</option>
+            <option value="HP">Himachal Pradesh</option>
+            <option value="JK">Jammu and Kashmir</option>
+            <option value="JH">Jharkhand</option>
+            <option value="KA">Karnataka</option>
+            <option value="KL">Kerala</option>
+            <option value="LA">Ladakh</option>
+            <option value="LD">Lakshadweep</option>
+            <option value="MP">Madhya Pradesh</option>
+            <option value="MH">Maharashtra</option>
+            <option value="MN">Manipur</option>
+            <option value="ML">Meghalaya</option>
+            <option value="MZ">Mizoram</option>
+            <option value="NL">Nagaland</option>
+            <option value="OR">Odisha</option>
+            <option value="PY">Puducherry</option>
+            <option value="PB">Punjab</option>
+            <option value="RJ">Rajasthan</option>
+            <option value="SK">Sikkim</option>
+            <option value="TN">Tamil Nadu</option>
+            <option value="TG">Telangana</option>
+            <option value="TR">Tripura</option>
+            <option value="UP">Uttar Pradesh</option>
+            <option value="UT">Uttarakhand</option>
+            <option value="WB">West Bengal</option>
+        </select>
         </div>
         <div class="form-group">
           <input type="text" name="city" placeholder="City" required="" />
