--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
       id="mainNav"
     >
       <div class="container px-4">
-        <a class="navbar-brand" href="{% url 'accounts:login' %}">Login</a>
+        <a class="navbar-brand" href="{% url 'accounts:signin' %}">Login</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -52,17 +52,17 @@
         </div>
       </div>
     </nav>
-    <h1>Hello</h1>
+  
     {% block content %} {% endblock content %}
 
-    <footer class="page-footer font-small bg-dark">
+    <!--footer class="page-footer font-small bg-dark">
       <div class="footer-copyright text-center py-3" style="color: aliceblue">
         © 2020 Copyright:
         <a href="https://mdbootstrap.com/"> MDBootstrap.com</a>
         <a href="#">Link 1</a>
         <a href="#">Link 2</a>
       </div>
-    </footer>
+    </footer>-->
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
