--- a/templates/app/family.html
+++ b/templates/app/family.html
@@ -133,7 +133,8 @@
   <form class="form" method="POST" action="{% url 'app:familyForm' %}">
     {% csrf_token %}
     <br>
-    <h3>Family Details</h3>
+    <h2>Report A Missing Persion</h2>
+    <h4>Family Details</h4>
     <hr />
     <div class="form11">
       <div class="signup">
