--- a/templates/app/person.html
+++ b/templates/app/person.html
@@ -191,7 +191,7 @@
         </div>
         <div class="form-group">
       
-          <select id="country-state" name="country-state">
+          <select id="country-state" name="state">
             <option value="none" selected disabled hidden>Select State</option>
             <option value="AN">Andaman and Nicobar Islands</option>
             <option value="AP">Andhra Pradesh</option>
