navbar brand name change

--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
       id="mainNav"
     >
       <div class="container px-4">
-        <a class="navbar-brand" href="{% url 'app:home' %}">Face Aging System</a>
+        <a class="navbar-brand" href="{% url 'app:home' %}">Brand</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -72,7 +72,8 @@
     </footer>
     <style>
       footer {
-        position: fixed;
+        position: absolute;
+        width: 100% ;
         height: 50px;
         bottom: 0px;
         left: 0px;
