--- a/templates/app/person.html
+++ b/templates/app/person.html
@@ -26,7 +26,7 @@
   }
   /* === Main Content CSS ===*/
   .wrapper {
-    padding: 50px 25px 0;
+    padding: 50px 25px 70px;
     max-width: 668px;
     width: 100%;
     margin: auto;
