--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,31 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <style>
+      footer {
+        position: absolute;
+        width: 100%;
+        height: 50px;
+        bottom: 0px;
+        left: 0px;
+        right: 0px;
+        margin-bottom: 0px;
+      }
+      /* / width / */
+      ::-webkit-scrollbar {
+        width: 10px;
+      }
+
+      /* / Track / */
+      ::-webkit-scrollbar-track {
+        background: #212529;
+      }
+
+      /* / Handle / */
+      ::-webkit-scrollbar-thumb {
+        background: #888;
+      }
+    </style>
   </head>
   <body>
     <nav
@@ -26,7 +51,7 @@
           aria-expanded="false"
           aria-label="Toggle navigation"
         >
-        <span class="navbar-toggler-icon"></span>
+          <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ms-auto">
@@ -43,17 +68,15 @@
             </li>
             <li class="nav-item">
               {% if user.is_authenticated %}
-              <a class="nav-link" href="{% url 'accounts:signout' %}"
-                >Logout</a
-              >
+              <a class="nav-link" href="{% url 'accounts:signout' %}">Logout</a>
               {% else %}
-              <a class="nav-link" href="{% url 'accounts:signin' %}"
-                >Login</a
-              >
+              <a class="nav-link" href="{% url 'accounts:signin' %}">Login</a>
               {% endif %}
             </li>
             <li class="nav-item">
-              <a class="nav-link">{% if user.is_authenticated %} {{request.user.email}} {% endif%}</a>
+              <a class="nav-link"
+                >{% if user.is_authenticated %} {{request.user.email}} {%endif%}</a
+              >
             </li>
           </ul>
         </div>
@@ -62,25 +85,14 @@
     <!-- <h1>Hello</h1> -->
     {% block content %} {% endblock content %}
 
-    <footer class="page-footer font-small bg-dark" style="bottom: 0vh">
-      <div class="footer-copyright text-center py-3" style="color: aliceblue">
+    <footer class="page-footer font-small bg-dark">
+      <div class="footer-copyright text-center py-2" style="color: aliceblue">
         © 2020 Copyright:
         <a href="https://mdbootstrap.com/"> MDBootstrap.com</a>
         <a href="#">Link 1</a>
         <a href="#">Link 2</a>
       </div>
     </footer>
-    <style>
-      footer {
-        position: absolute;
-        width: 100% ;
-        height: 50px;
-        bottom: 0px;
-        left: 0px;
-        right: 0px;
-        margin-bottom: 0px;
-      }
-    </style>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
