--- a/templates/base.html
+++ b/templates/base.html
@@ -64,6 +64,9 @@
             </li>
             {% endif %}
             <li class="nav-item">
+              <a class="nav-link" href="{% url 'app:find' %}">Find</a>
+            </li>            
+            <li class="nav-item">
               <a class="nav-link" href="#services">About</a>
             </li>
             <li class="nav-item">
