added image input

--- a/templates/app/person.html
+++ b/templates/app/person.html
@@ -258,7 +258,12 @@
         <p style="color: red">{{error}}</p>
         {% endif %}         
       </div>
+      <div>
+      <label for="img">Add image :</label><br>
+      <input type="file" id="img" name="img" accept="image/*">
+      </div>
     </div>
+    
     <button type="submit" class="btn">Submit</button>
   </form>
 </div>
