--- a/templates/app/home.html
+++ b/templates/app/home.html
@@ -1,4 +1,270 @@
 {% extends "../base.html" %}
 {% block content %}
+<style>
+    :root {
+  --primary-color: #333;
+  --secondary-color: #444;
+  --overlay-color: rgba(0, 0, 0, 0.7);
+}
 
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  font-family: 'Catamaran', sans-serif;
+  line-height: 1.6;
+  color: #333;
+  font-size: 1.1rem;
+}
+
+h1,
+h2,
+h3,
+h4 {
+  line-height: 1.3;
+}
+
+a {
+  color: #444;
+  text-decoration: none;
+}
+
+ul {
+  list-style: none;
+}
+
+p {
+  text-align: justify;
+  
+}
+
+.container {
+  max-width: 1100px;
+  margin: auto;
+  overflow: hidden;
+  padding: 0 2rem;
+}
+
+#twelve {
+    background-color: var(--overlay-color);
+    position: relative;
+    color: #fff;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  margin: auto;
+  
+  
+}
+.section-a {
+  margin: 2rem 0;
+}
+
+.section-a .container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 3rem;
+  align-items: center;
+  justify-content: center;
+}
+
+.section-a h1 {
+  font-size: 4rem;
+  color: var(--primary-color);
+}
+
+.section-a p {
+  margin: 1rem 0;
+}
+
+.section-b {
+  position: relative;
+  background: url('https://www.missingkids.org/content/ncmec/en/ourwork/impact/_jcr_content/footer/container_327452693/null/twovariantscolumn_co/par_1/image.img.jpg') no-repeat bottom center/cover;
+  height: 600px;
+}
+
+.section-b-inner {
+  color: #fff;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  margin: auto;
+  max-width: 860px;
+  padding: 5rem 0;
+}
+
+.section-b-inner h3 {
+  font-size: 2rem;
+}
+
+.section-b-inner h2 {
+  font-size: 5rem;
+  margin-top: 1rem;
+}
+
+.section-b-inner p {
+  margin-top: 1rem;
+  font-size: 1.5rem;
+  
+}
+
+.section-c .gallery {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+}
+.section-c .gallery a:first-child {
+  /* grid-row-start: 1;
+  grid-row-end: 3; */
+  grid-row: 1/3;
+  grid-column: 1/3;
+}
+
+.section-c .gallery a:nth-child(2) {
+  grid-column-start: 3;
+  grid-column-end: 5;
+}
+
+.section-c .gallery img,
+.section-c .gallery a {
+  width: 100%;
+  height: 100%;
+}
+
+
+
+
+/* // .form-control-wrap {
+// 	position: relative;
+// 	display: inline-block;
+// 	width: 100%;
+// } */
+
+
+
+
+
+.btn {
+  display: inline-block;
+  background: var(--primary-color);
+  color: #fff;
+  padding: 0.8rem 1.5rem;
+  border: none;
+  cursor: pointer;
+  font-size: 1.1rem;
+  border-radius: 30px;
+}
+
+.btn:hover {
+  background: var(--secondary-color);
+}
+
+.overlay {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  
+}
+
+@media (max-width: 700px) {
+  .section-a .container {
+    grid-template-columns: 1fr;
+    text-align: center;
+  }
+
+  .section-a .container div:first-child {
+    order: 2;
+  }
+
+  .section-a .container div:nth-child(2) {
+    order: -1;
+  }
+
+  .section-a img {
+    width: 80%;
+    margin: auto;
+  }
+
+  .section-c .gallery {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+  }
+  .section-c .gallery a:first-child {
+    grid-row: 1/1;
+    grid-column: 1/1;
+  }
+
+  .section-c .gallery a:nth-child(2) {
+    grid-column: 2/4;
+    grid-row: 2/2;
+  }
+
+  .section-c .gallery a:last-child {
+    display: none;
+  }
+
+  
+}
+
+</style>
+
+
+  <!-- Showcase -->
+  <br>
+  <section class="section-a">
+    <div class="container">
+      <div>
+        <h1>Headinggg.</h1>
+        <p>
+            Human trafficking is one of the most adverse social issues currently faced by countries worldwide. According to the United Nations Children’s Fund (UNICEF) and the Inter-Agency Coordination Group against Trafficking (ICAT), 28% of the identified victims of human trafficking globally are children. Children separated from their parents, such as refugees and migrants, are most vulnerable to trafficking.  The actual number of missing children is much more than these official statistics as only a limited number of cases are reported because of the fear of traffickers, lack of information, and mistrust of authorities.
+        </p>
+        <a href="#" class="btn">Add Missing Person</a>
+      </div>
+      <img src="http://3j8k6a37jqs62043ri3fuxf7-wpengine.netdna-ssl.com/wp-content/uploads/2020/07/apu-das.jpg" style="width:500px;height:600px alt="" />
+    </div>
+  </section>
+
+  <section id="twelve">
+    
+        <h3 class="text-2">Progressive Face A</h3>
+        <h2 class="text-5 mt-1">People Aren't Hearing All the Music</h2>
+        <p class="mt-1">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta
+          repudiandae laboriosam quia, error tempore porro ducimus voluptate
+          laborum nostrum iure.
+        </p>
+      
+  </section>
+
+  <!-- Large Text -->
+  <section id="about" class="section-b">
+    <div class="overlay">
+      <div class="section-b-inner py-5">
+        <h3 class="text-2">Progressive Face A</h3>
+        <h2 class="text-5 mt-1">People Aren't Hearing All the Music</h2>
+        <p class="mt-1">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta
+          repudiandae laboriosam quia, error tempore porro ducimus voluptate
+          laborum nostrum iure.
+        </p>
+      </div>
+    </div>
+  </section>
+
+  
+<script>
+$(function() {
+    const $gallery = $('.gallery a').simpleLightbox();
+  });
+TaxiNewsSig("sig")</script>
 {% endblock %}
