added images upload field

--- a/templates/app/home.html
+++ b/templates/app/home.html
@@ -221,6 +221,7 @@ p {
 
   <!-- Showcase -->
   <br>
+<div class="home-main">
   <section class="section-a">
     <div class="container">
       <div>
@@ -230,7 +231,7 @@ p {
         </p>
         <a href="#" class="btn">Add Missing Person</a>
       </div>
-      <img src="http://3j8k6a37jqs62043ri3fuxf7-wpengine.netdna-ssl.com/wp-content/uploads/2020/07/apu-das.jpg" style="width:500px;height:600px alt="" />
+      <img src="http://3j8k6a37jqs62043ri3fuxf7-wpengine.netdna-ssl.com/wp-content/uploads/2020/07/apu-das.jpg" style="width:500px;height:600px" alt="" />
     </div>
   </section>
 
@@ -260,11 +261,12 @@ p {
       </div>
     </div>
   </section>
-
+</div>
   
 <script>
 $(function() {
     const $gallery = $('.gallery a').simpleLightbox();
   });
-TaxiNewsSig("sig")</script>
+TaxiNewsSig("sig");
+</script>
 {% endblock %}
