--- a/templates/base.html
+++ b/templates/base.html
@@ -19,6 +19,9 @@
         right: 0px;
         margin-bottom: 0px;
       }
+      a.nav-link {
+        font-size: 16px !important;
+      }
       /* / width / */
       ::-webkit-scrollbar {
         width: 10px;
@@ -90,10 +93,8 @@
 
     <footer class="page-footer font-small bg-dark">
       <div class="footer-copyright text-center py-2" style="color: aliceblue">
-        © 2020 Copyright:
-        <a href="https://mdbootstrap.com/"> MDBootstrap.com</a>
-        <a href="#">Link 1</a>
-        <a href="#">Link 2</a>
+        © 2020 Copyright
+        <!-- <a href="#">Link 1</a> -->
       </div>
     </footer>
     <script
