--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
     />
     <style>
       footer {
-        position: absolute;
+        position: fixed;
         width: 100%;
         height: 50px;
         bottom: 0px;
